add & style homepage welcome message

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -1,14 +1,13 @@
-      <div class="intro-text">
-        <p class="intro-prompt">Check out your neighbors' vision of West Louisville's future!</p>
-        <ul class="category-list">
-          <li><a href="/visions/economy/list" class="economy-link">Economy</a></li>
-          <li><a href="/visions/health/list" class="health-link">Health</a></li>
-          <li><a href="/visions/energy/list" class="energy-link">Energy</a></li>
-          <li><a href="/visions/living/list" class="living-link">Living</a></li>
-          <li><a href="/visions/connectivity/list" class="connectivity-link">Connectivity</a></li>
-          <li><a href="/visions/identity/list" class="identity-link">Identity</a></li>
-          <li><a href="/visions/creativity/list" class="creativity-link">Creativity</a></li>
-        </ul>
+      <div class="container-fullwidth welcome">
+        <a href="#" class="welcome-close-btn">&times;</a>
+        <div class="welcome-header">
+          <img src="https://si0.twimg.com/profile_images/2577247503/5x0gwbixfjv435lujqh3.jpeg" class="welcome-avatar">
+          <span class="welcome-prequestion"><span class="nobreak">Mayor Greg Fischer</span> <span class="nobreak">wants to know,</span></span>
+          <h1 class="welcome-question">&#8220;What's your vision for the future of Louisville?&#8221;</h1>
+          <a href="#" class="welcome-more-link">Read more . . .</a>
+        </div>
+        
+        <a href="/visions/new" class="btn btn-block btn-primary">Add My Vision</a>
       </div>
 
       <div class="container-fullwidth vision-gallery">
@@ -56,3 +55,17 @@
 
       </div>
       <a href="/visions/list" class="btn btn-block">See All Visions</a>
+
+      <hr>
+
+      <div class="visionaries">
+        <h4>We are the visionaries of Louisville!</h4>
+        <ul class="visionaries-list unstyled-list"></ul>
+        <a href="/users/list" class="btn btn-block">See All Visionaries</a>
+      </div>
+
+      <div class="allies">
+        <h4>We are the allies, listening to you!</h4>
+        <ul class="allies-list unstyled-list"></ul>
+        <a href="/users/list" class="btn btn-block">See All Allies</a>
+      </div>
