clean up vision/support styles

--- a/src/visionlouisville/jstemplates/home-vision-tpl.html
+++ b/src/visionlouisville/jstemplates/home-vision-tpl.html
@@ -13,5 +13,5 @@
 
   <span class="vision-list-category-icon">Category: <strong class="capitalize">{{ category }}</strong></span>
 
-  <span class="support supported"><img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count visionary-support-count">8,675,309</span> Visionary(s) &amp; <span class="support-count ally-support-count">42</span> Ally(s)</span>
+  <span class="support support-small supported"><img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">42</span></span>
 </a>
