Polish up the vision supporter list - Update with the styled markup - User real supporter counts - Handle pluralization and add handlebars helper - Make the user avatar template/view generic

--- a/src/visionlouisville/jstemplates/support-list-tpl.html
+++ b/src/visionlouisville/jstemplates/support-list-tpl.html
@@ -1,2 +1,3 @@
-    <p class="support supported"><img class="heart heart-inline" src="/static/images/heart-beige.png"> You, <span class="support-count visionary-support-count">610</span> Visionary(s) &amp; <span class="support-count ally-support-count">31</span> Ally(s) support this.</p>
-    <ul class="support-list unstyled-list"></ul>
+    <p class="support supported"><img class="heart heart-inline" src="/static/images/heart-beige.png"> <span class="support-count visionary-support-count">{{ supporters.length }}</span>
+      {{pluralize supporters.length 'Visionary supports' 'Visionaries support'}} this.</p>
+    <ul class="user-list visionaries-list unstyled-list clearfix"></ul>
