--- a/src/visionlouisville/jstemplates/support-list-tpl.html
+++ b/src/visionlouisville/jstemplates/support-list-tpl.html
@@ -1,3 +1,3 @@
-    <p class="support supported"><img class="heart heart-inline" src="/static/images/heart-beige.png"> <span class="support-count visionary-support-count">{{ supporters.length }}</span>
+    <p class="support{{#if_supported}} supported{{/if_supported}}"><img class="heart heart-inline" src="/static/images/heart-beige.png"> <span class="support-count visionary-support-count">{{ supporters.length }}</span>
       {{pluralize supporters.length 'Visionary supports' 'Visionaries support'}} this.</p>
     <ul class="user-list visionaries-list unstyled-list clearfix"></ul>
