fix short content causing heart to overlap vision footer

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -1,7 +1,7 @@
 <div class="container container-primary">
-  <article class="vision">
+  <article class="vision clearfix">
 
-    <header class="vision-header clearfix">
+    <header class="vision-header">
 
       <!-- FIXME: link to list of user's visions -->
       <a href="/visions/{{ id }}" class="user-link"><img src="{{ author_details.avatar_url }}" class="avatar" /></a>
