fix vision padding/margin

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -1,10 +1,10 @@
       <div class="container-fullwidth welcome">
-        <a href="#" class="welcome-close-btn">&times;</a>
+        <!-- <a href="#" class="welcome-close-btn">&times;</a> -->
         <div class="welcome-header">
           <img src="https://si0.twimg.com/profile_images/2577247503/5x0gwbixfjv435lujqh3.jpeg" class="welcome-avatar">
           <span class="welcome-prequestion"><span class="nobreak">Mayor Greg Fischer</span> <span class="nobreak">wants to know,</span></span>
           <h1 class="welcome-question">&#8220;What's your vision for the future of Louisville?&#8221;</h1>
-          <a href="#" class="welcome-more-link">Read more . . .</a>
+          <a href="#" class="welcome-more-link">Read more&hellip;</a>
         </div>
         
         <a href="/visions/new" class="btn btn-block btn-primary">Add My Vision</a>
@@ -59,7 +59,7 @@
       <hr>
 
       <div class="visionaries">
-        <h4>We are the visionaries of Louisville!</h4>
+        <h5>We are the visionaries of Louisville!</h5>
         <ul class="user-list visionaries-list unstyled-list clearfix">
           <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3467035972/4c978ba8510da3fb77d2d5e9ae7c93f0_bigger.jpeg"></a></li>
           <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3106524836/0e83d22a9c1a30cd53e30f0fc6412da2_bigger.jpeg"></a></li>
@@ -86,7 +86,7 @@
       </div>
 
       <div class="allies">
-        <h4>We are the allies, listening to you!</h4>
+        <h5>We are the allies, listening to you!</h5>
         <ul class="user-list allies-list unstyled-list clearfix">
           <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3467035972/4c978ba8510da3fb77d2d5e9ae7c93f0_bigger.jpeg"></a></li>
           <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3106524836/0e83d22a9c1a30cd53e30f0fc6412da2_bigger.jpeg"></a></li>
