Rerender support summary when supporter list changes
- Add a template partial for support summary
- precompile handlebars templates when Django renders them
- handle collection change events in SupportListView
- change the total support count when the support count link is clicked

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -13,7 +13,7 @@
         <em class="twitter-handle">@{{ author_details.username }}</em>
       </span>
 
-      <a href="#" class="support-link support{{#if_supported}} supported{{/if_supported}}"><img class="heart" src="/static/images/heart.png"> <span class="support-count total-support-count">642</span></a>
+      <a href="#" class="support-link support{{#if_supported}} supported{{/if_supported}}"><img class="heart" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></a>
 
     </header>
 
