--- a/src/visionlouisville/jstemplates/support-list-tpl.html
+++ b/src/visionlouisville/jstemplates/support-list-tpl.html
@@ -1,3 +1,2 @@
-    <p class="support{{#if_supported}} supported{{/if_supported}}"><img class="heart heart-inline" src="/static/images/heart-beige.png"> <span class="support-count visionary-support-count">{{ supporters.length }}</span>
-      {{pluralize supporters.length 'Visionary supports' 'Visionaries support'}} this.</p>
+    <div class="support-summary">{{> support-summary-tpl }}</div>
     <ul class="user-list visionaries-list unstyled-list clearfix"></ul>
