fix layout of support/visions

--- a/src/visionlouisville/jstemplates/list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-tpl.html
@@ -15,7 +15,7 @@
 
     <span class="vision-list-category-icon">Category: <strong class="capitalize">{{ category }}</strong></span>
 
-    <span class="support support-small supported"><img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></span>
+    <span class="support supported"><img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></span>
   </a>
 
 </article><!-- end .vision -->
