--- a/src/visionlouisville/jstemplates/reply-list-tpl.html
+++ b/src/visionlouisville/jstemplates/reply-list-tpl.html
@@ -2,11 +2,10 @@
     <ul class="replies-list unstyled-list"></ul>
 
     {{#authenticated}}
-    <button class="show-reply btn btn-block">Reply to this vision</button>
     <form class="reply-form">
       <textarea name="text" class="reply-text"></textarea>
       <span class='reply-count'></span> <button class="reply-btn btn btn-primary btn-large" disabled>Tweet Reply</button>
     </form>
     {{^}}
-    <a id="login-to-reply" href="/login/twitter/?next={{ window_location }}">Login to reply</a>
+    <a id="login-to-reply" class="btn btn-block btn-secondary" href="/login/twitter/?next={{ window_location }}">Sign in to reply <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon"></a>
     {{/authenticated}}
