Hook up visionary and ally lists on the home page to views - Generalize the SupportListView to a UserAvatarListView - Add regions for visionaries and allies on the home view - Add templates for visionaries and allies - Render home pages on the home route, not init

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -6,7 +6,7 @@
           <h1 class="welcome-question">&#8220;What's your vision for the future of Louisville?&#8221;</h1>
           <a href="#" class="welcome-more-link">Read more&hellip;</a>
         </div>
-        
+
         <a href="/visions/new" class="btn btn-block btn-primary">Add My Vision</a>
       </div>
 
@@ -58,56 +58,5 @@
 
       <hr>
 
-      <div class="visionaries">
-        <h5>We are the visionaries of Louisville!</h5>
-        <ul class="user-list visionaries-list unstyled-list clearfix">
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3467035972/4c978ba8510da3fb77d2d5e9ae7c93f0_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3106524836/0e83d22a9c1a30cd53e30f0fc6412da2_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000055713047/92a416340c75d67e21492c04e2757c42_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000090293114/1d37b4c37c949857f3bc83340890bc6b_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/712863751/lil-wayne-gq-2_bigger.jpg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3782614006/17d1d1a2e48c5c4052517a418874c677_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000079197431/27ffdf7620d9f870be38df56c784c0d5_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3472865437/698a3a61d91cc9f556d3c294b0b763de_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3764210470/212b47b120e1ff61a661a2e57f652e60_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/246073324/IL2_bigger.jpg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/1793336519/twitter_bigger.png"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000039826497/5df112163499cde887b50b16711666c7_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3467035972/4c978ba8510da3fb77d2d5e9ae7c93f0_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3106524836/0e83d22a9c1a30cd53e30f0fc6412da2_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000055713047/92a416340c75d67e21492c04e2757c42_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000090293114/1d37b4c37c949857f3bc83340890bc6b_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/712863751/lil-wayne-gq-2_bigger.jpg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3782614006/17d1d1a2e48c5c4052517a418874c677_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000079197431/27ffdf7620d9f870be38df56c784c0d5_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3472865437/698a3a61d91cc9f556d3c294b0b763de_bigger.jpeg"></a></li>
-        </ul>
-        <a href="/users/list" class="btn btn-block">See All Visionaries</a>
-      </div>
-
-      <div class="allies">
-        <h5>We are the allies, listening to you!</h5>
-        <ul class="user-list allies-list unstyled-list clearfix">
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3467035972/4c978ba8510da3fb77d2d5e9ae7c93f0_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3106524836/0e83d22a9c1a30cd53e30f0fc6412da2_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000055713047/92a416340c75d67e21492c04e2757c42_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000090293114/1d37b4c37c949857f3bc83340890bc6b_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/712863751/lil-wayne-gq-2_bigger.jpg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3782614006/17d1d1a2e48c5c4052517a418874c677_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000079197431/27ffdf7620d9f870be38df56c784c0d5_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3472865437/698a3a61d91cc9f556d3c294b0b763de_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3764210470/212b47b120e1ff61a661a2e57f652e60_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/246073324/IL2_bigger.jpg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/1793336519/twitter_bigger.png"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000039826497/5df112163499cde887b50b16711666c7_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3467035972/4c978ba8510da3fb77d2d5e9ae7c93f0_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3106524836/0e83d22a9c1a30cd53e30f0fc6412da2_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000055713047/92a416340c75d67e21492c04e2757c42_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000090293114/1d37b4c37c949857f3bc83340890bc6b_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/712863751/lil-wayne-gq-2_bigger.jpg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3782614006/17d1d1a2e48c5c4052517a418874c677_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/378800000079197431/27ffdf7620d9f870be38df56c784c0d5_bigger.jpeg"></a></li>
-          <li><a href="#"><img class="avatar" src="https://si0.twimg.com/profile_images/3472865437/698a3a61d91cc9f556d3c294b0b763de_bigger.jpeg"></a></li>
-        </ul>
-        <a href="/users/list" class="btn btn-block">See All Allies</a>
-      </div>
+      <div class="visionaries-region"></div>
+      <div class="allies-region"></div>
