--- a/src/visionlouisville/jstemplates/support-summary-tpl.html
+++ b/src/visionlouisville/jstemplates/support-summary-tpl.html
@@ -1,2 +1,2 @@
 <p class="support{{#if_supported}} supported{{/if_supported}}"><img class="heart heart-inline" src="/static/images/heart-beige.png"> <span class="support-count visionary-support-count">{{ supporters.length }}</span>
-  {{pluralize supporters.length 'Visionary supports' 'Visionaries support'}} this.</p>
+  {{pluralize supporters.length 'visionary supports' 'visionaries support'}} this.</p>
