--- a/src/visionlouisville/jstemplates/reply-list-tpl.html
+++ b/src/visionlouisville/jstemplates/reply-list-tpl.html
@@ -7,5 +7,5 @@
       <span class='reply-count'></span> <button class="reply-btn btn btn-primary btn-large" disabled>Tweet Reply</button>
     </form>
     {{^}}
-    <a id="login-to-reply" class="btn btn-block btn-secondary" href="/login/twitter/?next={{ window_location }}">Sign in to reply <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon"></a>
+    <a id="login-to-reply" class="btn btn-block btn-secondary" href="/login/twitter/?next={{ window_location }}">Sign in to reply <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
     {{/authenticated}}
