Show correct supporter count on the home page.

--- a/src/visionlouisville/jstemplates/home-vision-tpl.html
+++ b/src/visionlouisville/jstemplates/home-vision-tpl.html
@@ -13,5 +13,5 @@
 
   <span class="vision-list-category-icon">Category: <strong class="capitalize">{{ category }}</strong></span>
 
-  <span class="support supported"><img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">42</span></span>
+  <span class="support supported"><img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></span>
 </a>
