--- a/src/visionlouisville/jstemplates/home-vision-tpl.html
+++ b/src/visionlouisville/jstemplates/home-vision-tpl.html
@@ -11,7 +11,7 @@
 
   <span class="vision-title">{{ title }}</span>
 
-  <span class="vision-list-category-icon">Category: <strong class="capitalize">{{ category }}</strong></span>
+  <span class="vision-list-category-icon">Category: <strong class="capitalize">{{ category }}</strong><img src="/static/images/category-icon-d5d5c6-{{ category }}.png" class="icon-inline"></span>
 
   <span class="support supported"><img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></span>
 </a>
