--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -60,3 +60,19 @@
 
       <div class="visionaries-region"></div>
       <div class="allies-region"></div>
+
+      <div class="container-fullwidth welcome site-footer">
+
+        <h5>What is VizLou?</h5>
+        <p><strong>VizLou</strong> is a place to share what you love about Louisville, and your ideas (visions) to make it better. Want to share something you love about Louisville? Tweet with the hashtag <strong>#vizlou</strong>. Have a great idea for the future of Louisville? <a href="/visions/new"><strong>Add it here!</strong></a></p>
+
+        <h5>What are Allies?</h5>
+        <p><strong>Allies</strong> are the community leaders, city officials, mentors, and educators listening to your ideas for the future of Louisville.</p>
+
+        <h5>What is what?</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+        <h5>What is huh?</h5>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      </div>
