Add moment inspiration (MIGRATION)

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -3,6 +3,7 @@
   <form>
 
     <input type="hidden" name="author" value="{{ author }}">
+    <input type="hidden" name="inspiration" value="{{ inspiration }}">
 
     <h6>Select a Category:</h6>
     <ul class="vision-category-list unstyled-list">
