--- a/src/visionlouisville/jstemplates/list-item-moment-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-moment-tpl.html
@@ -7,6 +7,6 @@
     <em class="twitter-handle">via @{{ username }}</em>
   </span>
 
-  <a href="/visions/new" class="btn">Add My Vision</a>
+  <a href="/visions/inspired-by-{{ id }}/new" class="btn btn-block">Add My Vision</a>
 
 </article><!-- end .moment -->
