link read more to #site-footer

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -4,7 +4,7 @@
           <img src="https://si0.twimg.com/profile_images/2577247503/5x0gwbixfjv435lujqh3.jpeg" class="welcome-avatar">
           <span class="welcome-prequestion"><span class="nobreak">Mayor Greg Fischer</span> <span class="nobreak">wants to know,</span></span>
           <h1 class="welcome-question">&#8220;What's your vision for the future of Louisville?&#8221;</h1>
-          <a href="#" class="welcome-more-link">Read more&hellip;</a>
+          <a href="#site-footer" class="welcome-more-link">Read more&hellip;</a>
         </div>
 
         <a href="/visions/new" class="btn btn-block btn-primary">Add My Vision</a>
@@ -61,7 +61,7 @@
       <div class="visionaries-region"></div>
       <div class="allies-region"></div>
 
-      <div class="container-fullwidth welcome site-footer">
+      <div class="container-fullwidth welcome site-footer" id="site-footer">
 
         <h5>What is VizLou?</h5>
         <p><strong>VizLou</strong> is a place to share what you love about Louisville, and your ideas (visions) to make it better. Want to share something you love about Louisville? Tweet with the hashtag <strong>#vizlou</strong>. Have a great idea for the future of Louisville? <a href="/visions/new"><strong>Add it here!</strong></a></p>
