add /new button above category lists

--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -25,9 +25,10 @@
   </ul>
 
   {{# if category }}
-  <a href="/visions/list" class="btn btn-small" style="float:right;">See All Visions</a>
-  <h2><span style="text-transform:capitalize;">{{ category }}</span> Visions</h2>
+  <a href="/visions/list" class="btn btn-small" style="float:right;margin-top:0.5em;">See All Visions</a>
+  <h2><span style="text-transform:capitalize;">{{ category }}</span></h2>
   <h6 class="category-prompt">{{ category_prompt category }}</h6>
+  <a href="/visions/{{ category }}/new" class="btn btn-block btn-primary">Add My Vision</a>
   {{/ if }}
 
   <ul class="vision-list unstyled-list"></ul>
