Format user-entered text for HTML output
- replace new-lines with <br>
- create <a> tags from urls

--- a/src/visionlouisville/jstemplates/list-item-moment-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-moment-tpl.html
@@ -4,7 +4,7 @@
     <img class="moment-media" src="{{ media_url }}">
   </div>
   <p>
-    <span class="moment-text">{{ text }}</span>
+    <span class="moment-text">{{ formattext text }}</span>
     <span class="moment-author nobreak">via <em class="twitter-handle">@{{ username }}</em></span>
   </p>
 
