--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -21,8 +21,8 @@
 
     </header>
 
-    <h1 class="vision-title">{{ title }}</h1>
-    <p class="vision-description">{{ description }}</p>
+    <h1 class="vision-title">{{ formattext title }}</h1>
+    <p class="vision-description">{{ formattext description }}</p>
 
     <footer class="vision-footer clearfix">
       <a href="#" class="retweet-link{{#if_shared}} retweeted{{/if_shared}}"><span class="tweet-icon"><img class="tweet-icon-retweet" src="/static/images/retweet-icon.png"></span> Retweet</a>
