--- a/src/visionlouisville/jstemplates/list-item-vision-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-vision-tpl.html
@@ -11,7 +11,7 @@
       <em class="twitter-handle">@{{ author_details.username }}</em>
     </span>
 
-    <span class="vision-title">{{ title }}</span>
+    <span class="vision-title">{{ formattext title }}</span>
 
     <span class="vision-list-category-icon">Category: <strong class="capitalize">{{ category }}</strong><img src="/static/images/category-icon-d5d5c6-{{ category }}.png" class="icon-inline"></span>
 
