Limit the displayed length of URLs

--- a/src/visionlouisville/jstemplates/default-vision-tweet-tpl.html
+++ b/src/visionlouisville/jstemplates/default-vision-tweet-tpl.html
@@ -1,1 +1,1 @@
-Check out this vision about {{ category }} in Louisville, from <a href="http://www.twitter.com/{{ author_details.username }}">@{{ author_details.username }}</a>: <a href="{{ window_location }}">{{ window_location }}
+Check out this vision about {{ category }} in Louisville, from <a href="http://www.twitter.com/{{ author_details.username }}">@{{ author_details.username }}</a>: <a href="{{ window_location }}">{{ truncated_window_location 30 }}</a>
