Simple notification of replies for vision author
- Add vision author's twitter handle to reply form by default
- Focus with cursor after user's handle

--- a/src/visionlouisville/jstemplates/reply-list-tpl.html
+++ b/src/visionlouisville/jstemplates/reply-list-tpl.html
@@ -3,7 +3,7 @@
 
     {{#authenticated}}
     <form class="reply-form">
-      <textarea name="text" class="reply-text"></textarea>
+      <textarea name="text" class="reply-text">@{{ author_details.username }} </textarea>
       <span class='reply-count'></span> <button class="reply-btn btn btn-primary btn-large" disabled>Tweet Reply</button>
     </form>
     {{^}}
