Prompt to sign in before adding a vision on category list

--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -28,7 +28,13 @@
   <a href="/visions/list" class="btn btn-small" style="float:right;margin-top:0.5em;">See All Visions</a>
   <h2><span style="text-transform:capitalize;">{{ category }}</span></h2>
   <h6 class="category-prompt">{{ category_prompt category }}</h6>
+
+  {{#authenticated}}
   <a href="/visions/{{ category }}/new" class="btn btn-block btn-primary">Add My Vision</a>
+  {{^}}
+  <a href="{{ LOGIN_URL '/' }}visions/{{ category }}/new" class="btn btn-block btn-primary">Sign In and Add My Vision <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
+  {{/authenticated}}
+  
   {{/ if }}
 
   <ul class="vision-list unstyled-list"></ul>
