style on-off-switch

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -51,7 +51,7 @@
     </p>
 
     <p class="vision-tweet">
-      <label><input type="checkbox" data-placement="header" name="x-send-to-twitter"> Tweet this vision</label>
+      <label class="on-off-switch-label"><input type="checkbox" data-placement="header" name="x-send-to-twitter" class="on-off-switch is-visuallyhidden"><span class="on-off-switch-icon"><img src="/static/images/on-off-switch.png"></span> Tweet This Vision</label>
     </p>
 
     <p class="vision-save-action">
