Prevent saving a vision when the form is invalid - Add required to the vision title and description - Add logic to handle non-html5 validation browser (prevent save and focus on the invalid element)

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -42,12 +42,12 @@
 
     <p class="vision-title">
       <h6>Title Your Vision:</h6>
-  	  <input name="title" placeholder="My vision..." class="input-block">
+  	  <input name="title" placeholder="My vision..." class="input-block" required>
     </p>
 
     <p class="vision-description">
       <h6>Describe Your Vision:</h6>
-      <textarea name="description" placeholder="My vision for Louisville is..."></textarea>
+      <textarea name="description" placeholder="My vision for Louisville is..." required></textarea>
     </p>
 
     <p class="vision-tweet">
