added language about inspirations

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -70,7 +70,7 @@
         <h5>What is #VizLou?</h5>
         <p><strong>#VizLou</strong> is a place to share what you love about Louisville, and your ideas to make it better.</p>
         
-        <p>Want to share something you love about Louisville? Tweet with the hashtag <strong>#vizlou</strong> and see what other people say.</p>
+        <p>Want to share something you love about Louisville? Tweet your inspirations with the hashtag <strong>#vizlou</strong> and see what visions they inspire from others.</p>
         
         <p>Have a great idea for the future of Louisville? Sign in with your Twitter account, and <a href="/visions/new"><strong>add it here!</strong></a> Explore visions from others, add comments and hearts to show your support.</p>
 
