--- a/src/visionlouisville/jstemplates/home-visionaries-tpl.html
+++ b/src/visionlouisville/jstemplates/home-visionaries-tpl.html
@@ -1,3 +1,3 @@
-  <h5>We are the visionaries of Louisville!</h5>
+  <h5>We are the Visionaries of Louisville!</h5>
   <ul class="user-list visionaries-list unstyled-list clearfix"></ul>
   <a href="/users/list" class="btn btn-block">See All Visionaries</a>
