--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -7,11 +7,11 @@
           <a href="#site-footer" class="welcome-more-link">Read more&hellip;</a>
         </div>
 
-        {{#authenticated}}
+        {{#if_authenticated}}
         <a href="/visions/new" class="btn btn-block btn-primary">Add My Vision</a>
         {{^}}
         <a href="{{ LOGIN_URL '/visions/new' }}" class="btn btn-block btn-primary">Sign In and Add My Vision <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
-        {{/authenticated}}
+        {{/if_authenticated}}
       </div>
 
       <div class="container-fullwidth vision-gallery">
