--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -17,7 +17,7 @@
 
       {{^authenticated}}
       <div class="support-login-prompt is-hidden"><a href="{{ LOGIN_URL }}" class="btn btn-secondary btn-small">Sign in to support this vision! <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a></div>
-      {{/authenticated}}
+      {{/if_authenticated}}
 
     </header>
 
@@ -29,7 +29,7 @@
       <a href="#login-to-reply" class="reply-link show-reply"><span class="tweet-icon"><img class="tweet-icon-reply" src="/static/images/reply-icon.png"></span> Reply</a>
       <a href="/visions/{{ category }}/list" class="category-link"><strong class="capitalize">{{ category }}</strong><img src="/static/images/category-icon-268099-{{ category }}.png" class="icon-inline"></a>
 
-      {{#authenticated}}
+      {{#if_authenticated}}
       <div class="confirm-retweet-prompt retweet-prompt-box is-hidden">
         <h5>Retweet this to your Twitter followers?</h5>
         
@@ -44,7 +44,7 @@
       {{^}}
       <div class="retweet-login-prompt retweet-prompt-box is-hidden"><a href="{{ LOGIN_URL }}" class="btn btn-secondary btn-small">Sign in to share or reply to this vision! <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a></div>
       </div>
-      {{/authenticated}}
+      {{/if_authenticated}}
     </footer>
 
   </article><!-- end .vision -->
