--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -29,11 +29,11 @@
   <h2><span style="text-transform:capitalize;">{{ category }}</span></h2>
   <h6 class="category-prompt">{{ category_prompt category }}</h6>
 
-  {{#authenticated}}
+  {{#if_authenticated}}
   <a href="/visions/{{ category }}/new" class="btn btn-block btn-primary">Add My Vision</a>
   {{^}}
   <a href="{{ LOGIN_URL '/' }}visions/{{ category }}/new" class="btn btn-block btn-primary">Sign In and Add My Vision <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
-  {{/authenticated}}
+  {{/if_authenticated}}
   
   {{/ if }}
 
