--- a/src/visionlouisville/jstemplates/ally-signup-tpl.html
+++ b/src/visionlouisville/jstemplates/ally-signup-tpl.html
@@ -1,29 +1,54 @@
 <div class="container">
-  {{# if_authenticated }}
+  {{# if_in_group 'allies' }}
+    <h2>You're an Ally!</h2>
+    <p>Your participation is vital: promote the tool and use it to engage with youth. Allies like you can can engage and empower young adults by engaging, sharing and supporting their visions. Your comments and suggestions help develop visions and encourage the visionaries. Thanks for your time!
+    </p>
+    <a href="/" class="btn btn-block btn-primary">Return to VizLou</a>
+  {{^}}
+    <p>#VizLou is a website for young adults to share their visions for the future of Louisville.</p>
+     
+    <p>Your participation is vital: promote the tool and use it to engage with youth. Allies like you can can engage and empower young adults by engaging, sharing and supporting their visions. Your comments and suggestions help develop visions and encourage the visionaries. Thanks for your time!
+    </p>
 
-    {{# if_in_group 'allies' }}
-      <h2>You're an Ally!</h2>
-      <p>Thanks for becoming an ally for the visionaries of Louisville. As an ally you will lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac placerat lectus. In sed eros vel dolor aliquet tempor congue.</p>
-      <p>Don't share this link!</p>
-      <a href="/" class="btn btn-block btn-primary">Return to VizLou</a>
-    {{^}}
+    <p>Enter your email address to finish becoming an ally.</p>
+
+    {{# if_authenticated }}
       <form method="POST">
-        <h2>Become an Ally!</h2>
-        <p>Allies lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac placerat lectus. In sed eros vel dolor aliquet tempor congue.</p>
-
         <input type="hidden" name="csrfmiddlewaretoken" value="{{ CSRF_TOKEN }}">
 
-        <label for="ally-signup-email">Email address:</label>
-        <input id="ally-signup-email" name="email" type="email" required="required"></input>
+        <p class="vision-title">
+          <h6>Your email address:</h6>
+          <input name="email" type="email" class="input-block" required>
+        </p>
 
-        <button type="submit" class="btn btn-block btn-primary">Become an Ally!</button>
+        <button type="submit" class="btn btn-block btn-primary">Become an Ally today!</button>
       </form>
-    {{/ if_in_group }}
-  
-  {{^}}
-  
-    <p>You must sign in to become an ally.</p>
-    <a href="{{ LOGIN_URL }}" class="btn btn-block btn-primary">Sign In with Twitter <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
-  
-  {{/ if_authenticated }}
+    {{^}}
+      <p>To get started sign in with your Twitter account.</p>
+      <a href="{{ LOGIN_URL }}" class="btn btn-block btn-primary">Sign In with Twitter <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
+    {{/ if_authenticated }}
+
+  {{/ if_in_group }}
+
+  <h5>Two ways to engage</h5>
+  <p>Allies help get the conversation started by sharing inspirations, and they comment, heart and share visions. #VizLou is live until August 15th, check in frequently to see the latest.</p>
+   
+  <h6>Share inspirations</h6>
+   
+  <p>What can you inspire? Tweet a positive story about the West End:<br/>
+  <em>Grilling and chilling on my block. That’s why I love the ‘Ville. #vizlou</em><br/> 
+  <em>#vizlou watching high schoolers graduate! So proud</em></p>
+  <p>Include a pic! Use the #vizlou hashtag. It will show up on VizLou.org, where visionaries can respond to it.</p>
+   
+  <h6>Explore visions at VizLou.org</h6>
+  <p>Engage with visionary youth:</p>
+  <ul>
+  <li>Read visions.</li>
+  <li>Click the heart to show support for visions.</li>
+  <li>Share visions using your Twitter account, to demonstrate your interest and to draw in others.</li>
+  <li>Comment to help visions become better defined.</li>
+  </ul>
+   
+  <h5>Questions?</h5>
+  <p>Contact <a href="mailto:hello@vizlou.org">hello@vizlou.org</a> if you have questions</p>
 </div>
