--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -35,7 +35,7 @@
         
         <div class="tweet-preview clearfix">
           <img src="{{ STATIC_URL }}images/apple-touch-icon-72x72-precomposed.png" class="tweet-preview-avatar">
-          <p class="tweet-preview-text">{{> default-vision-tweet-tpl }}</p>
+          <p class="tweet-preview-text">{{ SAFE_TWEET_TEXT . }}</p>
         </div>
 
         <a href="#" class="btn btn-cancel cancel-retweet-action">Cancel</a> &nbsp;
