Make category nullable

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -9,7 +9,7 @@
     <ul class="vision-category-list unstyled-list">
       {{#select category}}
         <li class="vision-category-economy">
-          <label><input checked type="radio" name="category" value="economy" class="category-icon is-visuallyhidden"><img src="/static/images/mask-e7e7d7-economy.png"><span class="is-visuallyhidden">Economy</span></label>
+          <label><input type="radio" name="category" value="economy" class="category-icon is-visuallyhidden"><img src="/static/images/mask-e7e7d7-economy.png"><span class="is-visuallyhidden">Economy</span></label>
         </li>
         <li class="vision-category-health">
           <label><input type="radio" name="category" value="health" class="category-icon is-visuallyhidden"><img src="/static/images/mask-e7e7d7-health.png"><span class="is-visuallyhidden">Health</span></label>
