--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -26,7 +26,10 @@
     <footer class="vision-footer clearfix">
       <a href="#" class="retweet-link{{#if_shared}} retweeted{{/if_shared}}"><span class="tweet-icon"><img class="tweet-icon-retweet" src="/static/images/retweet-icon.png"></span> Retweet</a>
       <a href="#login-to-reply" class="reply-link show-reply"><span class="tweet-icon"><img class="tweet-icon-reply" src="/static/images/reply-icon.png"></span> Reply</a>
+
+      {{# if category }}
       <a href="/visions/{{ category }}/list" class="category-link"><strong class="capitalize">{{ category }}</strong><img src="/static/images/category-icon-268099-{{ category }}.png" class="icon-inline"></a>
+      {{/ if }}
 
       {{#if_authenticated}}
       <div class="confirm-retweet-prompt retweet-prompt-box is-hidden">
