--- a/src/visionlouisville/jstemplates/list-item-vision-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-vision-tpl.html
@@ -13,7 +13,9 @@
 
     <span class="vision-title">{{ formattruncated text 140 }}</span>
 
+    {{# if category }}
     <span class="vision-list-category-icon"><strong class="capitalize">{{ category }}</strong><img src="/static/images/category-icon-d5d5c6-{{ category }}.png" class="icon-inline"></span>
+    {{/ if }}
 
     <span class="support supported"><img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></span>
   </a>
